Avanzata versione a 1.1.8. Corretto conflitto bean configurazioneRepository in deploy WAR. Rinominati operationId OpenAPI.
